tests/language_modules/12_type_conflicts/invalid_semantics/procedure_function_name_collision.vf
module ProcedureFunctionNameCollision

procedure load()
is
    check true
end load

function load() returns Integer
is
    return 1
end load

end ProcedureFunctionNameCollision